--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/content.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 
 <body>
@@ -264,6 +265,7 @@
             <img class="logo__image" src="./assets/img/logo-menu-md.webp" alt="">
         </a>
     </footer> -->
+    <script src="./assets/js/custom.js"></script>
 </body>
 
 </html>
