--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         </div>
                         <div class="links__third_part">
                             <a href="#" class="links__betano">
-                                <img src="./assets/img/logo_betano_30.webp" alt="">
+                                <img src="./assets/img/logos/logo_betano_30.webp" alt="">
                             </a>
                             <a href="#" class="links__adidas">
-                                <img src="./assets/img/adidas.webp" alt="">
+                                <img src="./assets/img/logos/logo-adidas.webp" alt="">
                             </a>
                             <ul class="social-links">
                                 <li class="social-links__item">
@@ -147,7 +147,7 @@
             <div class="container">
                 <div class="row">
                     <a href="/index.html" class="logo">
-                        <img class="logo__image" src="./assets/img/logo-menu-md.webp" alt="">
+                        <img class="logo__image" src="./assets/img/logos/logo-menu-md.webp" alt="">
                     </a>
                     <button type="button" class="menu__button">
                         <i class="fa fa-bars"></i>
@@ -169,9 +169,46 @@
         </div>
     </header>
 
+    <div class="container-fluid banners">
+        <div class="row">
+            <div class="col col-xs-12 col-md-6 banners__item">
+                <a href="#" class="banners__banner">
+                    <figure class="banners__figure">
+                        <img class="banners__image" src="./assets/img/banners/futebol.webp" alt="">
+                        <figcaption class="banners__caption">
+                            <div>
+                                <span>Futebol</span>
+                                <h3>Com emoção no fim, Flamengo vence o Santos e segue à caça da liderança do
+                                    Brasileirão</h3>
+                                <p>Léo Pereira, Carrascal e Bruno Henrique balançaram as redes no Maracanã no triunfo
+                                    por 3 a 2</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
+            <div class="col col-xs-12 col-md-6 banners__item">
+                <a href="#" class="banners__banner">
+                    <figure class="banners__figure">
+                        <img class="banners__image" src="./assets/img/banners/basquete.webp" alt="">
+                        <figcaption class="banners__caption">
+                            <div>
+                                <span>Basquete</span>
+                                <h3>Com show de Gui Deodato, Flamengo vence Pato Basquete no retorno ao Maracanãzinho
+                                </h3>
+                                <p>Absoluto em quadra, Mais Querido chega a quarta pontuação centenária em oito jogos
+                                    nesta edição do NBB: 101 a 63</p>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
+        </div>
+    </div>
+
     <div class="container news">
         <div class="row">
-            <div class="col col-sx-12 col-md-6 news__item">
+            <div class="col col-xs-12 col-md-6 news__item">
                 <span class="news__header">
                     <h2 class="news__title">Futebol feminino</h2>
                     <a href="#" class="news__link">Veja todas as notícias</a>
@@ -192,7 +229,7 @@
                     </figure>
                 </a>
             </div>
-            <div class="col col-sx-12 col-md-6 news__item">
+            <div class="col col-xs-12 col-md-6 news__item">
                 <span class="news__header">
                     <h2 class="news__title">Basquete</h2>
                     <a href="#" class="news__link">Veja todas as notícias</a>
@@ -215,7 +252,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col col-sx-12 col-md-6 news__item">
+            <div class="col col-xs-12 col-md-6 news__item">
                 <span class="news__header">
                     <h2 class="news__title"> </h2>
                     <a href="#" class="news__link">Veja todas as notícias</a>
@@ -236,7 +273,7 @@
                     </figure>
                 </a>
             </div>
-            <div class="col col-sx-12 col-md-6 news__item">
+            <div class="col col-xs-12 col-md-6 news__item">
                 <span class="news__header">
                     <h2 class="news__title">Vôlei</h2>
                     <a href="#" class="news__link">Veja todas as notícias</a>
@@ -259,12 +296,57 @@
             </div>
         </div>
     </div>
+    <div class="container partners">
+        <div class="row">
+            <div class="col col-xs-12 col-md-4 partners__item">
+                <a href="#">
+                    <img src="./assets/img/patrocinadores/betano.png" alt="">
+                </a>
+            </div>
+            <div class="col col-xs-12 col-md-4 partners__item">
+                <a href="#">
+                    <img src="./assets/img/patrocinadores/adidas.webp" alt="">
+                </a>
+                <a href="#">
+                    <img src="./assets/img/patrocinadores/nacao.webp" alt="">
+                </a>
+            </div>
+            <div class="col col-xs-12 col-md-4 partners__item">
+                <a href="#4">
+                    <img src="./assets/img/patrocinadores/brb.webp" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer--red">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-xs-12 col-md-6 footer__item">
+                        <div>
+                            <h4>Sede Gávea</h4>
+                            <ul>
+                                <li>Av. Borges de Medeiros, 997</li>
+                                <li>Lagoa - Rio de Janeiro/RJ</li>
+                                <li>CEP: 22430-041 - Tel:(21) 2159-0100</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col col-xs-12 col-md-6 footer__item">
+                        <div>
+                            <h4>Sede Gávea</h4>
+                            <ul>
+                                <li>CT George Helal</li>
+                                <li>Vargem Grande - Rio de Janeiro/RJ</li>
+                                <li>CEP: 22785-275</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-    <!-- <footer>
-        <a href="/index.html" class="logo">
-            <img class="logo__image" src="./assets/img/logo-menu-md.webp" alt="">
-        </a>
-    </footer> -->
     <script src="./assets/js/custom.js"></script>
 </body>
 
